Version 1.5.3
-------------

- Fix for buffering Events to disk that have null values in their extras map.

Version 1.5.2
-------------

- Add ability to remove individual tags or extra data from the context, or clear them entirely.

Version 1.5.1
-------------

- Don't attempt to serialize Iterables and don't special case serialization for Path objects, fixes broken Android release.

Version 1.5.0
-------------

- Reduce logging noise if JNDI is missing.
- Add OSGi support. (thanks markwoon)
- Local variable agent beta.

Version 1.4.0
-------------

- Automatically set ``stacktrace.app.packages`` on Android if it is not provided by the user.
- Enable UncaughtExceptionHandler by default, add ``uncaught.handler.enabled`` option.
- Add Spring exception reporter and Spring Boot servlet initializer.

Version 1.3.1
-------------

- Reduce startup and shutdown logging noise by moving a lot of INFO level logs to DEBUG.
- Android: fallback to `os.version` property for kernel version is `/proc/version` is unreadable.

Version 1.3.0
-------------

- Deprecate ``extratags`` in favor of the more clear ``mdctags``.
- Add ability to set ``extra`` data via options and on ``SentryClient`` instances.
- Add ability to set ``extra`` data and ``tags`` in the current context.

Version 1.2.2
-------------

- Make operations on Context threadsafe.

Version 1.2.1
-------------

- Fix ``SentryStackTraceElement`` to implement ``Serializable``.

Version 1.2.0
-------------

- Allow overriding the location of the properties file.
- Add support for handling and uploading Proguard files to Sentry (for Android applications).
- Cleanup thread local context in ``ThreadLocalContextManager`` after each servlet request finishes.
- Change the ``EventBuilder`` hostname lookup code to only run one thread at a time.
- Add ``ShouldSendEventCallback``, which can be added to each ``SentryClient`` instance.
- Add ability to set extra data on the ``UserInterface``.

Version 1.1.0
-------------
